WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129510
JSC Assertion failure every time I start Safari (
r164846
)
https://bugs.webkit.org/show_bug.cgi?id=129510
Summary
JSC Assertion failure every time I start Safari (r164846)
Geoffrey Garen
Reported
2014-02-28 15:20:43 PST
JSC Assertion failure every time I start Safari (
r164846
)
Attachments
Patch
(3.04 KB, patch)
2014-02-28 15:22 PST
,
Geoffrey Garen
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2014-02-28 15:21:05 PST
<
rdar://problem/16191793
>
Geoffrey Garen
Comment 2
2014-02-28 15:22:46 PST
Created
attachment 225496
[details]
Patch
Geoffrey Garen
Comment 3
2014-02-28 15:23:29 PST
Speculative fix.
Mark Hahnenberg
Comment 4
2014-02-28 15:28:37 PST
Comment on
attachment 225496
[details]
Patch r=me
Geoffrey Garen
Comment 5
2014-02-28 16:39:45 PST
Committed
r164897
: <
http://trac.webkit.org/changeset/164897
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug