JSC Assertion failure every time I start Safari (r164846) https://bugs.webkit.org/show_bug.cgi?id=129510

Reviewed by Mark Hahnenberg.

Take the lock before allocating objects because afterward is too late.

* bindings/js/ScriptController.cpp:
(WebCore::ScriptController::evaluateInWorld):
(WebCore::ScriptController::windowScriptNPObject):
(WebCore::ScriptController::jsObjectForPluginElement):


Canonical link: https://commits.webkit.org/147579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164897 268f45cc-cd09-0410-ab3c-d52691b4dbfc